--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ cache:
   - .m2/repository
 
 maven-build:
-  images: maven:3-jdk-8
+  image: maven:3-jdk-8
   stage: build
   variables:
     MAVEN_OPTS: "Dmaven.repo.local=.m2/repository"
